--- a/package.json
+++ b/package.json
@@ -1,55 +1,32 @@
 {
-  "name": "mexc-liquidation-bot",
+  "name": "extended-futures-trading-bot",
   "version": "1.0.0",
-  "description": "MEXC Futures Liquidation Alert Bot - Real-time liquidation monitoring with Telegram alerts",
+  "description": "Automated trading bot for Extended.exchange DEX (Starknet) that reads signals from Telegram",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js",
-    "test": "node test.js",
-    "test:telegram": "node -e \"require('./test.js').testTelegram()\"",
-    "test:websocket": "node -e \"require('./test.js').testWebSocket()\"",
-    "test:volume": "node -e \"new (require('./test.js').VolumeAggregatorTest)().runAllTests()\"",
-    "simulate": "node -e \"require('./test.js').simulateLiquidationEvent()\"",
-    "debug": "node -e \"new (require('./test.js').DebugBot)().start()\"",
-    "performance": "node -e \"require('./test.js').performanceTest()\"",
-    "pm2:start": "pm2 start index.js --name mexc-bot",
-    "pm2:stop": "pm2 stop mexc-bot",
-    "pm2:restart": "pm2 restart mexc-bot",
-    "pm2:logs": "pm2 logs mexc-bot",
-    "pm2:status": "pm2 status"
+    "test": "node index.js",
+    "balance": "node scripts/check-balance.js",
+    "positions": "node scripts/check-positions.js"
   },
   "keywords": [
-    "mexc",
-    "liquidation",
+    "extended",
+    "exchange",
     "trading",
     "bot",
-    "telegram",
     "futures",
-    "crypto",
-    "alerts"
+    "starknet",
+    "telegram",
+    "dex"
   ],
-  "author": "Your Name",
-  "license": "MIT",
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "axios": "^1.6.2",
-    "dotenv": "^16.3.1",
-    "node-telegram-bot-api": "^0.64.0",
-    "ws": "^8.14.2"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.2"
-  },
-  "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=9.0.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/yourusername/mexc-liquidation-bot.git"
-  },
-  "bugs": {
-    "url": "https://github.com/yourusername/mexc-liquidation-bot/issues"
-  },
-  "homepage": "https://github.com/yourusername/mexc-liquidation-bot#readme"
+    "starknet": "^6.3.0",
+    "node-telegram-bot-api": "^0.66.0",
+    "dotenv": "^16.4.5",
+    "axios": "^1.7.7",
+    "winston": "^3.15.0"
+  }
 }
